--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "element-plus": "^2.8.5",
+    "sortablejs": "^1.15.6",
+    "uuid": "^11.0.3",
     "vue": "^3.2.13",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
